Eliminated hard-coded paths
This script should now from everywhere, even if the script is just
referenced via a symlink.

It is even possible to specify a different port by using a different
port number in the symlink's name.

--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -1,13 +1,11 @@
-# rsync daemon for ssh-tunneled access to localhost @ port 10873.
+# rsync daemon for ssh-tunneled access to localhost.
 
 # Run as
 #
-# $ rsync --daemon --config=/home/gb/.config/rsyncd.conf --no-detach
+# $ rsync --daemon -p $LISTEN_PORT --config=$PATH2THISFILE --no-detach
 
-port = 10873
 address = localhost
 log file = /dev/stderr
-pid file = /home/gb/var/run/rsyncd.pid
 use chroot = false
 read only = true
 
