Also synchronize manually fetched packages
They shall be put into /var/cache/apt/manually.

--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -17,3 +17,7 @@ dont compress = *
 [apt-lists]
 path = /var/lib/apt/lists
 comment = Locally downloaded APT package lists (for apt-get update)
+
+[apt-manually]
+path = /var/cache/apt/manually
+comment = Manually obtained packages not in any of the official repositories
