Filter out unnecessary files
A bit problematic is just filtering out the partial/* subdirectory
trees.

On one hand, those directories may contain partially downloaded files
which are worth being continued downloading later.

On the other hand, the permissions of the "partial"-subdirectories allow
only "root" to read the files in there. But this rsync configuration is
not supposed to be used by "root".

So, we filter out "partial" because it could not be ready anyway.

It is therefore recommended to fist finish downloading updates
completely before sharing the downloaded files. That way the
"partial"-directories will always be empty, and their contents will thus
not be missed.

Also note that some of the files filtered out now have already been
filtered out by the client update script
"rsync-apt-receive-via-ssh-tunnel" (part of branch
i7plqrb7887azjcnxws0tsve0, usually checked out as
/usr/local/sbin/xworld_debian) which accesses this rsync server as a
client. However, filtering them out already on the server side makes
listings easier to read and transmits shorter listings, saving
bandwidth.

--- a/rsyncd.conf
+++ b/rsyncd.conf
@@ -11,13 +11,17 @@ read only = true
 
 [apt-archives]
 path = /var/cache/apt/archives
+filter = - /lock - /partial/***
+exclude = *.FAILED *.debdelta
 comment = Locally downloaded APT packages (for apt-get upgrade)
 dont compress = *
 
 [apt-lists]
 path = /var/lib/apt/lists
+filter = - /lock - /partial/*** - /_***
 comment = Locally downloaded APT package lists (for apt-get update)
 
 [apt-manually]
 path = /var/cache/apt/manually
+filter = - /lock - /partial/*** - /_***
 comment = Manually obtained packages not in any of the official repositories
